# FHT--File-Converter

./: CITATION.cff  Dockerfile  README.md  fhr.py  fhr_convert.py  fht_schema.json  fht_validate.py  pyproject.toml  pytest.ini
examples/: example.fhr.fasta  example.fhr.json  example.fhr.yaml  example.fht.fasta  example.fht.json  example.fht.yaml  example.microdata.fhr.html  example.microdata.fht.html
fasta/: fhr_fasta_combine.py  fht_fasta_strip.py  fht_fasta_validate.py
gfa/: fhr_gfa_strip.py  fht_gfa_combine.py  fht_gfa_validate.py
tests/: fhr_test.py
