[tool.flake8]
max-line-length = 120
ignore = "E203, E266, E501, W503"

[tool.poetry]
name = "fht"
version = "0.1.1"
description = "This tool is used to validate and convert between different FHT header serializations"
authors = ["David Molik <david.molik@usda.gov>","Adam Wright <adam.wright@oicr.on.ca>"]
license = "USDA-ARS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
microdata = "^0.8.0"
jsonschema = "^4.21.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-jsonschema = "^4.21.0.20240118"
isort = "^5.13.2"
black = "^24.1.1"
ruff = "^0.2.1"

[tool.poetry.scripts]
fht-convert = "fht_convert:main"
fht-validate = "fht_validate:main"
fht-fasta-strip = "fasta.fht_fasta_strip:main"
fht-fasta-combine = "fasta.fht_fasta_combine:main"
fht-fasta-validate = "fasta.fht_fasta_validate:main"
fht-gfa-strip = "gfa.fht_gfa_strip:main"
fht-gfa-combine = "gfa.fht_gfa_combine:main"
fht-gfa-validate = "gfa.fht_gfa_validate:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

